# django-sotp

./: .gitignore  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: django.yml
core/: settings.py  urls.py
django_sotp/: apps.py  manage.py
django_sotp/django_sotp/: asgi.py  settings.py  urls.py  wsgi.py
djangorest_sotp/: apps.py  manage.py
djangorest_sotp/djangorest_sotp/: asgi.py  settings.py  urls.py  wsgi.py
example/: urls.py  views.py
example/static/css/: plugin.bundle.css  style.bundle.css
example/static/js/: authentication.js  plugins.bundle.js  scripts.bundle.js
example/templates/: base.html
example/templates/example/: confirm-otp.html  login.html  sign-up.html  welcome.html
sotp/: admin.py  apps.py  manage.py  models.py  services.py  tests.py
sotp/helpers/: remove_otps  remove_otps.py  schedulers.py
sotp/migrations/: 0001_initial.py  0002_alter_usersotp_otp.py  0002_usersotp_verified.py  0003_alter_usersotp_otp_alter_usersotp_totp.py  0003_alter_usersotp_table.py  0004_alter_usersotp_date_modified.py
sotp/sotp/: asgi.py  settings.py  urls.py  wsgi.py
