[metadata]
name = django_sotp
version = 1.0
description = Generate a secured base32 one time password to authenticate your user! ðŸ”
long_description = file:README.md
url = https://github.com/israelabraham/django-sopt
license = CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
classifiers =
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
license_file = LICENSE.txt
description-file = README.md

[options]
include_package_data = true
python_requires = >=3.6
packages = find:
install_requires =
    Django>=2.2

[pycodestyle]
ignore = E402,E722
max-line-length = 120
exclude = *migrations*, *tests*, *settings*